[FIX] web: graph view is not displayed in full height
Before this commit: graph view is not displayed in full height, it is squished
instead, graph view should take full height.

After this commit: graph view will be displayed in use full height.

task-2654896

--- a/addons/web/static/src/views/graph/graph_view.scss
+++ b/addons/web/static/src/views/graph/graph_view.scss
@@ -1,6 +1,7 @@
 .o_graph_view {
-  height: 100%;
-
+  .o_graph_renderer{
+    height: 100%;
+  }
   .o_graph_canvas_container {
     padding-top: 5px;
     position: relative;
